--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,9 @@ author:
   avatar           : "profile.png"
   name             : "Hemanshu Das"
   pronouns         : # example: "she/her"  
-  bio              : "PhD Student, Operations"
+  bio              : "Short biography for the left-hand sidebar"
   location         : "New Haven, CT"
-  employer         : "Yale School of Management"
+  employer         : "Yale University - School of Management"
   uri              : # URL
   email            : "hemanshu.das@yale.edu" 
 
@@ -75,7 +75,7 @@ author:
   xing             : # Username
   youtube          : # Username
   zhihu            : # Username
-  strava	   : https://www.strava.com/athletes/24946710
+  strava	   : #https://www.strava.com/athletes/24946710
 
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
